apps/pingme-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pingme-backend
  labels:
    app.kubernetes.io/name: pingme-backend
    app.kubernetes.io/part-of: workload-2
