apps/pingme-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingme-backend
  namespace: pingme-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: pingme-backend.api-api-api.com
    external-dns.alpha.kubernetes.io/target: a6aaa50f-2590-4179-84f2-d0f18bce0587.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pingme-backend.api-api-api.com
      secretName: pingme-backend-tls
  rules:
    - host: pingme-backend.api-api-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingme-backend
                port:
                  name: http
